Improve about text

--- a/views/about.jade
+++ b/views/about.jade
@@ -4,6 +4,19 @@ block header
     h1 O Stowarzyszeniu
 
 block content
+
+    p Szczecińskie Towarzystwo Socjologiczne jest jest dobrowolnym zrzeszeniem osób fizycznych i prawnych, zawiązanym dla realizacji celów statutowych.
+    p Celem Stowarzyszenia jest szeroko rozumiana intelektualna i praktyczna działalność naukowa i badawcza na rzecz gromadzenia, rozpowszechniania i zastosowania wiedzy o zjawiskach i procesach społecznych na terenie miasta Szczecina i regionu Pomorza Zachodniego.
+    p Stowarzyszenie realizuje swoje cele poprzez:
+    ul
+        li inicjowanie, tworzenie i przeprowadzanie projektów i przedsięwzięć pomocnych w realizacji celów Stowarzyszenie,
+        li podejmowanie przedsięwzięć naukowych oraz inicjatyw edukacyjnych i popularyzatorskich służących wzbogacaniu i rozpowszechnianiu wiedzy o zjawiskach i procesach społecznych rozgrywających się w społeczeństwach miasta Szczecina i Pomorza Zachodniego,
+        li wydawanie publikacji naukowych prezentujących wyniki badań prowadzonych przez Stowarzyszenie lub inne osoby, instytucje, stowarzyszenia itp. podejmujące podobną problematykę badawczą,
+        li inicjowanie interdyscyplinarnych badań i publikacji,
+        li współpracę z uczelniami wyższymi Pomorza Zachodniego,
+        li współpracę z instytucjami i organizacjami rządowymi, samorządowymi i pozarządowymi zajmującymi się bezpośrednio lub pośrednio problematyką badań socjologicznych,
+        li pozyskiwanie i rozdzielanie funduszy na realizację celów Stowarzyszenia.
+
     h2 Zarząd
     ul
         li dr Ryszard Czyszkiewicz - Przewodniczący
