--- a/views/reports.jade
+++ b/views/reports.jade
@@ -4,7 +4,87 @@ block header
     h1 Raporty i ekspertyzy
 
 block content
-    ul
-    each report in reports
-        li
-            a(href="/reports/" + report)= report
+    .project
+        h3 Wspólnoty samorządowe województwa zachodniopomorskiego 2010-2015
+        p Publikacja prezentująca wskaźniki rozwoju wspólnot samorządowych województwa zachodniopomorskiego w latach 2010-2015.
+        | Obejmująca dwie części publikacja powstała z inicjatywy członków Szczecińskiego Towarzystwa Socjologicznego przy wsparciu finansowym Urzędu Marszałkowskiego Województwa Zachodniopomorskiego oraz Miasta i Gminy Stepnica
+        ul.partners
+            li
+                a(href="http://www.wzp.pl")
+                    img(src="/partners/logotyp_województwa.jpg")
+            li.lower-priority
+                a(href="http://www.stepnica.pl")
+                    img(src="/partners/stepnica.png")
+        ul
+            li
+                a(href="/reports/Wspólnoty samorządowe wzp Wskaźniki.pdf") Wspólnoty samorządowe wzp Wskaźniki.pdf
+            li
+                a(href="/reports/Wspólnoty samorządowe wzp 2010-2015.pdf") Wspólnoty samorządowe wzp 2010-2015.pdf
+
+    .project
+        h3 Śródmiejski odcinek Alei Wojska Polskiego w oczach mieszkańców Szczecina. Raport z badań socjologicznych
+        p Celem badań było uzyskanie wiedzy i poznanie opinii mieszkańców i użytkowników Alei Wojska Polskiego na temat stopnia aprobaty i gotowości poparcia określonych przedsięwzięć zmierzających do rewitalizacji jej śródmiejskiego odcinka (od Pl. Szarych Szeregów do Pl. Zwycięstwa).
+        | Zleceniodawcą badań była Gmina Miasto Szczecin
+        ul.partners
+            li
+                a(href="http://www.szczecin.pl")
+                    img(src="/partners/miasto_szczecin.png")
+        ul
+            li
+                a(href="/reports/Aleja Wojska Polskiego_zalacznik.pdf") Aleja Wojska Polskiego_zalacznik.pdf
+            li
+                a(href="/reports/STS Raport Miasto.pdf") STS Raport Miasto.pdf
+            li
+                a(href="/reports/Prezentacja Alei Wojska Polskiego.pdf") Prezentacja Alei Wojska Polskiego.pdf
+
+    .project
+        h3 Zdolność gmin do realizacji zadań własnych i zleconych przez administrację rządową 2010-2013
+        p STS w 2014 roku opracowało ekspertyzę na temat możliwości realizacji zadań własnych i zleconych przez gminy województwa zachodniopomorskiego.
+        | Zleceniodawcą ekspertyzy był Wojewoda Zachodniopomorski
+        ul.partners
+            li
+                a(href="http://www.szczecin.uw.gov.pl")
+                    img(src="/partners/wojewoda_logotyp.jpg")
+        ul
+            li
+                a(href="/reports/STS Zdolności gmin do realizacji zadań własnych i zleconych przez administrację rządową 2010-2013.pdf") STS Zdolności gmin do realizacji zadań własnych i zleconych przez administrację rządową 2010-2013.pdf
+            li
+                a(href="/reports/Prezentacja Zdolności gmin.pdf") Prezentacja Zdolności gmin.pdf
+
+    .project
+        h3 Poziom zależności bytowej we wspólnotach terytorialnych (gminach) – ludzkie i finansowe obciążenia rozwoju
+        p Analiza opiera się na danych pochodzących ze wszystkich gmin województwa zachodniopomorskiego zebranych w sprawozdaniach MPiPS-03 w latach 2008-2013.
+        | Analiza została zrealizowana w ramach Zachodniopomorskiego Regionalnego Obserwatorium Terytorialnego (ROT)
+        ul.partners
+            li
+                a(href="http://eregion.wzp.pl/zachodniopomorskie-regionalne-obserwatorium-terytorialne")
+                    img(src="/partners/logotyp_województwa.jpg")
+        ul
+            li
+                a(href="/reports/STS Poziom zależności bytowej we wspólnotach terytorialnych (gminach) - ludzkie i finansowe obciążenia rozwoju.pdf") STS Poziom zależności bytowej we wspólnotach terytorialnych (gminach) - ludzkie i finansowe obciążenia rozwoju.pdf
+            li
+                a(href="/reports/Bogactwo_gminy_wiejskie_2013.pdf") Bogactwo_gminy_wiejskie_2013.pdf
+
+    .project
+        h3 Zmniejszanie deficytu ludnościowego w województwie zachodniopomorskim w oparciu o imigrantów i uchodźców
+        p Opracowanie ma za zadanie dostarczyć podstawowej wiedzy na temat przebiegów procesów demograficznych w województwie zachodniopomorskim (jako całości oraz w jego subregionach i powiatach), zwłaszcza prognoz dotyczących stanu liczebnego ludności regionu w perspektywie następnych 20 lat (do roku 2035).
+        | Ekspertyza została wykonana w ramach Zachodniopomorskiego Regionalnego Obserwatorium Terytorialnego (ROT)
+        ul.partners
+            li
+                a(href="http://eregion.wzp.pl/zachodniopomorskie-regionalne-obserwatorium-terytorialne")
+                    img(src="/partners/logotyp_województwa.jpg")
+        ul
+            li
+                a(href="/reports/STS Zmniejszanie deficytu ludnosciowego w województwie zachodniopomorskim.pdf") STS Zmniejszanie deficytu ludnosciowego w województwie zachodniopomorskim.pdf
+
+    .project
+        h3 Województwo Zachodniopomorskie 2005-2014. Gospodarka i społeczeństwo
+        p Ekspertyza ma na celu przedstawienie zmiany miejsca województwa zachodniopomorskiego na tle innych województw w latach 2005-2014.
+        | Zleceniodawcą ekspertyzy był Wojewoda Zachodniopomorski
+        ul.partners
+            li
+                a(href="http://www.szczecin.uw.gov.pl")
+                    img(src="/partners/wojewoda_logotyp.jpg")
+        ul
+            li
+                a(href="/reports/STS Województwo Zachodniopomorskie Prezentacja.pdf") STS Województwo Zachodniopomorskie Prezentacja.pdf
