Change color scheme

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -118,8 +118,7 @@ ul.menu li a:hover {
 }
 
 .body-header {
-  background: darkslateblue;
-  background: #333332;
+  background: #0a0073;
   padding: 30px 0;
 }
 
