--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ head
     body
         .header
             .padder
-                img(src="/assets/images/logo.png", alt="Szczecińskie Towarzystwo Socjologiczne")
+                img(src="/assets/images/logo-blue.png", alt="Szczecińskie Towarzystwo Socjologiczne")
                 ul.menu
                     li
                         a(href="/kontakt") Kontakt
