Adjust styles in tempaltes

--- a/views/research.jade
+++ b/views/research.jade
@@ -2,3 +2,16 @@ extends layout.jade
 
 block header
     h1 Obszary badawcze
+
+block content
+    p Celem Stowarzyszenia jest szeroko rozumiana intelektualna i praktyczna działalność naukowa i badawcza na rzecz gromadzenia, rozpowszechniania i zastosowania wiedzy o zjawiskach i procesach społecznych na terenie miasta Szczecina i regionu Pomorza Zachodniego.
+
+    Stowarzyszenie realizuje swoje cele poprzez:
+
+    inicjowanie, tworzenie i przeprowadzanie projektów i przedsięwzięć pomocnych w realizacji celów Stowarzyszenie,
+    podejmowanie przedsięwzięć naukowych oraz inicjatyw edukacyjnych i popularyzatorskich służących wzbogacaniu i rozpowszechnianiu wiedzy o zjawiskach i procesach społecznych rozgrywających się w społeczeństwach miasta Szczecina i Pomorza Zachodniego,
+    wydawanie publikacji naukowych prezentujących wyniki badań prowadzonych przez Stowarzyszenie lub inne osoby, instytucje, stowarzyszenia itp. podejmujące podobną problematykę badawczą,
+    inicjowanie interdyscyplinarnych badań i publikacji,
+    współpracę z uczelniami wyższymi Pomorza Zachodniego,
+    współpracę z instytucjami i organizacjami rządowymi, samorządowymi i pozarządowymi zajmującymi się bezpośrednio lub pośrednio problematyką badań socjologicznych,
+    pozyskiwanie i rozdzielanie funduszy na realizację celów Stowarzyszenia.
