--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,31 +10,37 @@ head
     meta(name='keywords', content='noclegi, Konin, kwatery, pracownicze, pensjonat, hotel, Brzeńno, autostrada, motel, agroturystyka, ogród, dom wypoczynkowy, wczasy, grill, swoboda, internet, wifi, telewizja')
     body
         .header
-            .padder
-                img(src="/assets/images/logo-blue.png", alt="Szczecińskie Towarzystwo Socjologiczne")
-                ul.menu
-                    li
-                        a(href="/kontakt") Kontakt
-                    li
-                        a(href="/publikacje") Publikacje
-                    li
-                        a(href="/raporty-i-ekspertyzy") Raporty i ekspertyzy
-                    //li
-                    //    a(href="/obszary-badawcze") Obszary Badawcze
-                    //li
-                    //    a(href="/") Komunikaty
-                    li
-                        a(href="/") O Stowarzyszeniu
-                .clear
+            .container
+                .row
+                    .col-md-12
+                        img(src="/assets/images/logo-blue.png", alt="Szczecińskie Towarzystwo Socjologiczne")
+                        ul.menu
+                            li
+                                a(href="/kontakt") Kontakt
+                            li
+                                a(href="/publikacje") Publikacje
+                            li
+                                a(href="/raporty-i-ekspertyzy") Raporty i ekspertyzy
+                            //li
+                            //    a(href="/obszary-badawcze") Obszary Badawcze
+                            //li
+                            //    a(href="/") Komunikaty
+                            li
+                                a(href="/") O Stowarzyszeniu
+                        .clear
         .body
             .body-header
-                .padder
-                    block header
+                .container
+                    .row
+                        .col-md-12
+                            block header
             .body-content
-                .padder
+                .container
                     block content
-            .clear
         .footer
-            .padder Wszelkie prawa zastrzeżone <b>Szczecińskie Towarzystwo Socjologiczne 2016</b>
+            .container
+                .row
+                    .col-md-12
+                        p Wszelkie prawa zastrzeżone <b>Szczecińskie Towarzystwo Socjologiczne 2016</b>
         script(type='text/javascript', src='/js/plugins.js')
         script(type='text/javascript', src='/js/all.js')
