--- a/views/publications.jade
+++ b/views/publications.jade
@@ -4,12 +4,7 @@ block header
     h1 Publikacje
 
 block content
-    ul
-    //each publication in publications
-    //    .publication
-    //        .cover(style="background-image: url('" + publication.cover + "')")
-            //h2= publication.title
-            //p= publication.description
+    .row
     each cover in covers
-        .publication
+        .col-lg-3.col-md-4.col-sm-4.col-xs-6.publication
             .cover(style="background-image: url('/covers/" + cover + "')")
