--- a/views/about.jade
+++ b/views/about.jade
@@ -21,11 +21,11 @@ block content
         
             h2 Zarząd
             ul
-                li dr Ryszard Czyszkiewicz - Przewodniczący
-                li mgr Paweł Szklarski - Wiceprzewodniczący
-                li mgr Jonna Pośpiech - Skarbnik
+                li Włodzimierz Durka - prezes
+                li Paweł Szklarski - Wiceprezes
+                li Joanna Pośpiech - Skrabnik
             h2 Komisja Rewizyjna
             ul
-                li dr Włodzimierz Durka - Przewodniczący
-                li dr Albert Terelak - Członek
-                li dr Regina Thurow - Członek
+                li Sebastian Kołodzijczak
+                li Regina Thurow
+                li Albert Terelak
